--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,12 @@
 name: CI Pipeline
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - main
 
 jobs:
-  build:
+  build:  # 1. First: ensure code compiles/runs
     runs-on: ubuntu-latest
 
     steps:
@@ -28,3 +25,24 @@ jobs:
 
     - name: Run Python script
       run: uv run python main.py
+
+  test:  # 2. Then: run tests on the built code
+    runs-on: ubuntu-latest
+    needs: build  # Wait for build job to complete successfully
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install uv
+        uv sync
+
+    - name: Run tests
+      run: uv run pytest test_main.py -v
